--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <!-- <title>GraphQL with Sangria</title> -->
         <title> Rest  Apis VS GraphQL</title>
         <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
         <meta name="author" content="Oleg Ilyenko">
@@ -42,6 +43,13 @@
                         <!-- Introduction to-->
                         <strong>Rest API VS GraphQL API</strong>
                     </p>
+                    <!-- <p style="text-align: center" class="title-font">
+                        Introduction to <strong>GraphQL</strong>
+                      </p>
+            
+                      <p style="font-size: 70%; opacity: 0.5" class="normal-font">
+                        by Oleg Ilyenko / <a href="https://twitter.com/easyangel">@easyangel</a>
+                      </p> -->
                 </section>
                 <section>
                     <h2>Typical Rest API</h2>
@@ -434,6 +442,11 @@ val ProductType = deriveObjectType[Unit, Product]()
                             <strong>GraphQL:</strong>
                             <a href="http://graphql.org" target="_blank">http://graphql.org</a>
                         </li>
+                        <!-- <li><a href="http://bit.ly/graphql-introduction" target="_blank">http://bit.ly/graphql-introduction</a></li>
+                        <li><strong>GraphQL:</strong> <a href="http://graphql.org" target="_blank">http://graphql.org</a></li>
+                        <li><strong>Twitter:</strong> <a href="https://twitter.com/easyangel" target="_blank">https://twitter.com/easyangel</a></li>
+                        <li><strong>Zero To GraphQL:</strong> <a href="http://bit.ly/zero-to-graphql" target="_blank">http://bit.ly/zero-to-graphql</a></li>
+                        <li><strong>Sangria Playground:</strong> <a href="http://try.sangria-graphql.org" target="_blank">http://try.sangria-graphql.org</a></li> -->
                     </ul>
                     <br>
                     <br>
