--- a/index.html
+++ b/index.html
@@ -39,9 +39,14 @@
                     <img src="./6267597-middle-removebg-preview.png" class="" width="55%">
                     <img src="assets/img/graphql-white.svg" class="logo-image" width="35%">
                     <p style="text-align: center" class="title-font">
+                        <!-- Introduction to-->
                         <strong>Rest API VS GraphQL API</strong>
                     </p>
                    
+
+
+
+                    
                 </section>
                 <section>
                     <h2>Typical Rest API</h2>
@@ -418,7 +423,12 @@ val ProductType = deriveObjectType[Unit, Product]()
                             <strong>GraphQL:</strong>
                             <a href="http://graphql.org" target="_blank">http://graphql.org</a>
                         </li>
-                      </ul>
+                        <!-- <li><a href="http://bit.ly/graphql-introduction" target="_blank">http://bit.ly/graphql-introduction</a></li>
+                        <li><strong>GraphQL:</strong> <a href="http://graphql.org" target="_blank">http://graphql.org</a></li>
+                        <li><strong>Twitter:</strong> <a href="https://twitter.com/easyangel" target="_blank">https://twitter.com/easyangel</a></li>
+                        <li><strong>Zero To GraphQL:</strong> <a href="http://bit.ly/zero-to-graphql" target="_blank">http://bit.ly/zero-to-graphql</a></li>
+                        <li><strong>Sangria Playground:</strong> <a href="http://try.sangria-graphql.org" target="_blank">http://try.sangria-graphql.org</a></li> -->
+                    </ul>
                     <br>
                     <br>
                     <h2 class="fragment roll-in" data-fragment-index="3" style="opacity: 0.7;">Questions?</h2>
