--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
                         <!-- Introduction to-->
                         <strong>Rest API VS GraphQL API</strong>
                     </p>
-                   
-
-
-
-                    
+                    <!-- <p style="text-align: center" class="title-font">
+                        Introduction to <strong>GraphQL</strong>
+                      </p>
+                      <p style="font-size: 70%; opacity: 0.5" class="normal-font">
+                        by Oleg Ilyenko / <a href="https://twitter.com/easyangel">@easyangel</a>
+                      </p> -->
                 </section>
                 <section>
                     <h2>Typical Rest API</h2>
